--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,14 +1,29 @@
-pipeline
-  agent {label "linux"}
+pipeline {
+  agent {label 'linux'}
   options {
-    buildDiscarder logRotator(artifactDaysToKeepStr: '', artifactNumToKeepStr: '5', days
-ToKeepStr: '', numToKeepStr: '5')
-    disableConcurrentBuilds()
+    buildDiscarder(logRotator(numToKeepStr: '5'))
   }
   stages {
-    stage('Hello') {
+    stage('Build') {
       steps {
-        echo "hello"
+        sh './gradlew clean check --no-daemon'
+      }
+    }
+  }
+  post {
+    always {
+        junit(
+          allowEmptyResults: true, 
+          testResults: '**/build/test-results/test/*.xml'
+        )
+    stage('cat README') {
+      when {
+        branch "fix-*"
+      }
+      steps {
+        sh '''
+          cat README.md
+        '''
       }
     }
   }
